fix padding misalignment

--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -25,6 +25,10 @@
   order: -1;
 }
 
+.Home__subheading:nth-child(1) {
+  margin-top: 0;
+}
+
 .Home__paragraph {
   color: var(--grey-medium-light);
   font-size: clamp(0.8rem, 0.7rem + 1vw, 1rem);
@@ -64,12 +68,14 @@
 }
 
 @media (min-width: 1000px) {
+  .Home__subheading:nth-child(1) {
+    margin-top: 1.2rem;
+  }
+
   .Home__flexContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 0 1.2rem 1.2rem 1.2rem;
   }
-
-  
 }
